# web2_hw_9

./: pyproject.toml
scrap/: fill_db.py  main.py  models.py
soup/: fill_db.py  models.py  scrap.py
